name:                clos
version:             0.1.0.0
synopsis:            Combined line-of-sight on discrete grids
                     
description: Deterministic and probabilistic routines for calculation of
             combined line of sight (i.e. multiple visibility lines, LOS) between
             points on a discrete grid.

homepage:            https://github.com/nbrk/clos#readme
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
copyright:           2018 Nikolay Burkov
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , CLOS
                     , Bresenham
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , linear
                     , comonad
                     , mtl
